Update dev branch (#79)
* More fixes (#71)

* other: created PUML file

* backend: remove unused port and transated querytransform prompt template

* Revert "backend: remove unused port and transated querytransform prompt template"

This reverts commit 194f59cfd9f0d9a8ebf7e55216b3118274a93bc5.

* backend: removed unused service and debug controller

* Update QueryTransformerModule.java

* backend: remove unused module

* Update RetrievalService.java

* backend: removed unused values and renamed minioconfig

* backend: cleaned unnecessary code

* backend dependencies: updated Spring AI to v1.1.4

* frontend: fixed unmet peer dependencies

* backend: upgraded JWT dependencies and JwtUtils deprecated code

* backend rag: added logs for queryExpander and upped similarityThreshold

* backend dependencies: removed unused dependency

* backend: reduced similarity threshold

* Update .gitignore

* frontend: fixed routing error and added profile page

* Update .gitignore

* other: env example for config

* backend: moved from global encryption key to per conversation key

* docker: added docker config for backend and updated Milvus to v2.6.13

* backend: updated OllamaChatModel build

* frontend: refactored code

* Save: UI components and local edits

* Revert "Save: UI components and local edits"

This reverts commit afd163a570fa688a6f004cf5cc6a9638473841bb.

* backend: fixed timestamp not saving

* backend: improved evaluation prompt

* frontend: changed to JSON format and changed texts

* backend: added database email encryption

* backend: updated dependencies

* frontend: updated dependencies

* frontend: removed unused default React logo

* frontend: added alertType and ariaLive params to Alert

* frontend: improve accessibility

* frontend: updated vite, addressing 3 vulnerabilities

* benchmarks: gemini requests benchmark

* frontend: updated dependencies, addressing axios vulnerabilities

* frontend: bump dependencies

* backend: improved security changing from base